# MedSupport

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  create_dataset.py  justfile  main.py  onnx-worker.js  package-lock.json  package.json  pyproject.toml  test_onnx.html  train.py  tsconfig.json  vite.config.ts
crates/med-support-bert/: Cargo.toml
frontend/: index.html
frontend/src/: main.ts  onnx-worker.ts
scripts/: build_vector_db.py  compare.py  create_dataset.py  download_list.py  download_list.sh  train.py
